@@ -1,5 +1,6 @@
 package com.krickert.search.config.pipeline.model;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
 import com.fasterxml.jackson.datatype.jdk8.Jdk8Module;
@@ -7,21 +8,13 @@ import com.fasterxml.jackson.module.paramnames.ParameterNamesModule;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import java.io.ByteArrayInputStream;
 import java.io.InputStream;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
+import java.util.stream.Collectors;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 class PipelineClusterConfigTest {
 
@@ -35,107 +28,127 @@ class PipelineClusterConfigTest {
         objectMapper.enable(SerializationFeature.INDENT_OUTPUT);
     }
 
-    private PipelineStepConfig createSampleKafkaStep(String id, String moduleId, String next, String error) {
-        JsonConfigOptions customConfig = new JsonConfigOptions("{\"configFor\":\"" + id + "\"}");
-        KafkaTransportConfig kafkaConfig = new KafkaTransportConfig(
-                List.of("input-for-" + id),
-                "cluster." + moduleId + "." + id + ".out",
-                Map.of("acks", "1")
-        );
-        return new PipelineStepConfig(
-                id,
-                moduleId,
-                customConfig,
-                next != null ? List.of(next) : Collections.emptyList(),
-                error != null ? List.of(error) : Collections.emptyList(),
-                TransportType.KAFKA,
-                kafkaConfig,
-                null,
-                null  // stepType defaults to PIPELINE
-        );
+    // Helper to create JsonConfigOptions from a JSON string
+    private PipelineStepConfig.JsonConfigOptions createJsonConfigOptions(String jsonString) throws com.fasterxml.jackson.core.JsonProcessingException {
+        if (jsonString == null || jsonString.isBlank()) {
+            return new PipelineStepConfig.JsonConfigOptions(null, Collections.emptyMap());
+        }
+        // Assuming JsonConfigOptions has a constructor that takes JsonNode and Map
+        return new PipelineStepConfig.JsonConfigOptions(objectMapper.readTree(jsonString), Collections.emptyMap());
     }
 
-    private PipelineStepConfig createSampleGrpcStep(String id, String moduleId, String serviceId, String next, String error) {
-        JsonConfigOptions customConfig = new JsonConfigOptions("{\"configFor\":\"" + id + "\"}");
-        GrpcTransportConfig grpcConfig = new GrpcTransportConfig(
-                serviceId,
-                Map.of("timeout", "1000ms")
-        );
+    // --- Refactored Helper Methods for creating new PipelineStepConfig records ---
+    private PipelineStepConfig createSampleStep(
+            String stepName,
+            String moduleImplementationId, // Used for ProcessorInfo
+            TransportType processorNature, // KAFKA/GRPC implies grpcServiceName, INTERNAL implies internalProcessorBeanName
+            String customConfigJson,
+            List<String> nextStepTargetNames,    // For the "default" outputs
+            List<String> errorStepTargetNames,   // For the "onError" outputs
+            TransportType defaultOutputTransportType, // Transport for the "default" output
+            Object defaultOutputTransportConfig, // KafkaTransportConfig or GrpcTransportConfig for "default" output
+            StepType stepType // The new StepType enum (PIPELINE, SINK, INITIAL_PIPELINE)
+    ) throws com.fasterxml.jackson.core.JsonProcessingException {
+
+        PipelineStepConfig.ProcessorInfo processorInfo;
+        if (processorNature == TransportType.KAFKA || processorNature == TransportType.GRPC) {
+            processorInfo = new PipelineStepConfig.ProcessorInfo(moduleImplementationId, null);
+        } else { // INTERNAL
+            processorInfo = new PipelineStepConfig.ProcessorInfo(null, moduleImplementationId);
+        }
+
+        PipelineStepConfig.JsonConfigOptions configOptions = createJsonConfigOptions(customConfigJson);
+
+        Map<String, PipelineStepConfig.OutputTarget> outputs = new HashMap<>();
+        if (nextStepTargetNames != null) {
+            for (String nextTarget : nextStepTargetNames) {
+                KafkaTransportConfig outKafkaCfg = null;
+                GrpcTransportConfig outGrpcCfg = null;
+                if (defaultOutputTransportType == TransportType.KAFKA && defaultOutputTransportConfig instanceof KafkaTransportConfig) {
+                    outKafkaCfg = (KafkaTransportConfig) defaultOutputTransportConfig;
+                } else if (defaultOutputTransportType == TransportType.GRPC && defaultOutputTransportConfig instanceof GrpcTransportConfig) {
+                    outGrpcCfg = (GrpcTransportConfig) defaultOutputTransportConfig;
+                } else if (defaultOutputTransportType == TransportType.INTERNAL && defaultOutputTransportConfig == null) {
+                    // Correct for internal
+                } else if (defaultOutputTransportConfig != null) { // Should not happen if arguments are correct
+                    throw new IllegalArgumentException("Mismatched output transport config for type: " + defaultOutputTransportType + " for target " + nextTarget);
+                }
+                // Ensure unique keys if multiple next steps with same logical name (e.g. "default")
+                // For simplicity, this helper uses a generic "default" or "onError" key pattern.
+                // If actual nextSteps were List.of("t1", "t2"), we'd need unique keys like "output_t1", "output_t2"
+                String outputKey = "default_" + nextTarget.replaceAll("[^a-zA-Z0-9.-]", "_");
+                outputs.put(outputKey,
+                        new PipelineStepConfig.OutputTarget(nextTarget, defaultOutputTransportType, outGrpcCfg, outKafkaCfg)
+                );
+            }
+        }
+
+        if (errorStepTargetNames != null) {
+            for(String errorTarget : errorStepTargetNames) {
+                String outputKey = "onError_" + errorTarget.replaceAll("[^a-zA-Z0-9.-]", "_");
+                outputs.put(outputKey,
+                        new PipelineStepConfig.OutputTarget(errorTarget, TransportType.INTERNAL, null, null) // Default error paths to INTERNAL
+                );
+            }
+        }
+
         return new PipelineStepConfig(
-                id,
-                moduleId,
-                customConfig,
-                next != null ? List.of(next) : Collections.emptyList(),
-                error != null ? List.of(error) : Collections.emptyList(),
-                TransportType.GRPC,
-                null,
-                grpcConfig,
-                null  // stepType defaults to PIPELINE
-        );
-    }
-    private PipelineStepConfig createSampleInternalStep(String id, String moduleId, String next, String error) {
-        return new PipelineStepConfig(
-                id,
-                moduleId,
-                null, // No custom config
-                next != null ? List.of(next) : Collections.emptyList(),
-                error != null ? List.of(error) : Collections.emptyList(),
-                TransportType.INTERNAL,
-                null,
-                null,
-                null  // stepType defaults to PIPELINE
+                stepName,
+                stepType == null ? com.krickert.search.config.pipeline.model.StepType.PIPELINE : stepType,
+                "Description for " + stepName,
+                "schema-for-" + moduleImplementationId, // customConfigSchemaId
+                configOptions,
+                outputs,
+                0, 1000L, 30000L, 2.0, null, // Default retry/timeout
+                processorInfo
         );
     }
 
 
     @Test
     void testSerializationDeserialization() throws Exception {
-        // --- PipelineGraphConfig ---
-        Map<String, PipelineConfig> pipelines = new HashMap<>();
+        Map<String, PipelineConfig> pipelinesMap = new HashMap<>();
         Map<String, PipelineStepConfig> steps1 = new HashMap<>();
 
-        PipelineStepConfig step1_1 = createSampleKafkaStep("p1s1", "module-k1", "p1s2", "p1err1");
-        PipelineStepConfig step1_2 = createSampleGrpcStep("p1s2", "module-g1", "service-g1", null, null);
-        steps1.put(step1_1.pipelineStepId(), step1_1);
-        steps1.put(step1_2.pipelineStepId(), step1_2);
-        PipelineConfig pipeline1 = new PipelineConfig("pipeline-alpha", steps1);
-        pipelines.put(pipeline1.name(), pipeline1);
-        PipelineGraphConfig pipelineGraphConfig = new PipelineGraphConfig(pipelines);
+        PipelineStepConfig step1_1 = createSampleStep("p1s1", "module-k1", TransportType.GRPC,
+                "{\"configFor\":\"p1s1\"}", List.of("p1s2"), List.of("p1err1"),
+                TransportType.GRPC, new GrpcTransportConfig("service-g1-target", Map.of("timeout", "5s")),
+                com.krickert.search.config.pipeline.model.StepType.PIPELINE);
 
-        // --- PipelineModuleMap ---
+        PipelineStepConfig.ProcessorInfo step1_2ProcInfo = new PipelineStepConfig.ProcessorInfo("module-g1", null);
+        PipelineStepConfig step1_2 = new PipelineStepConfig("p1s2", com.krickert.search.config.pipeline.model.StepType.SINK,
+                "Description for p1s2", "schema-for-module-g1",
+                createJsonConfigOptions("{\"configFor\":\"p1s2\"}"),
+                Collections.emptyMap(), 0,1000L,30000L,2.0,null, step1_2ProcInfo);
+
+        steps1.put(step1_1.stepName(), step1_1);
+        steps1.put(step1_2.stepName(), step1_2);
+        PipelineConfig pipeline1 = new PipelineConfig("pipeline-alpha", steps1);
+        pipelinesMap.put(pipeline1.name(), pipeline1);
+        PipelineGraphConfig pipelineGraphConfig = new PipelineGraphConfig(pipelinesMap);
+
         Map<String, PipelineModuleConfiguration> modules = new HashMap<>();
         SchemaReference schemaRefK1 = new SchemaReference("schema-for-module-k1", 1);
-        PipelineModuleConfiguration moduleK1 = new PipelineModuleConfiguration(
-                "Kafka Module K1", "module-k1", schemaRefK1);
+        PipelineModuleConfiguration moduleK1 = new PipelineModuleConfiguration("Kafka Module K1", "module-k1", schemaRefK1);
         modules.put(moduleK1.implementationId(), moduleK1);
-
         SchemaReference schemaRefG1 = new SchemaReference("schema-for-module-g1", 2);
-        PipelineModuleConfiguration moduleG1 = new PipelineModuleConfiguration(
-                "gRPC Module G1", "module-g1", schemaRefG1);
+        PipelineModuleConfiguration moduleG1 = new PipelineModuleConfiguration("gRPC Module G1", "module-g1", schemaRefG1);
         modules.put(moduleG1.implementationId(), moduleG1);
         PipelineModuleMap pipelineModuleMap = new PipelineModuleMap(modules);
 
-        // --- Allowed Lists ---
-        Set<String> allowedKafkaTopics = new HashSet<>(Arrays.asList("input-for-p1s1", "cluster.module-k1.p1s1.out"));
-        Set<String> allowedGrpcServices = new HashSet<>(List.of("service-g1"));
+        Set<String> allowedKafkaTopics = new HashSet<>(); // No Kafka outputs in this specific primary path
+        Set<String> allowedGrpcServices = new HashSet<>(Arrays.asList("service-g1-target", "module-k1", "module-g1"));
 
-        // --- PipelineClusterConfig ---
         PipelineClusterConfig config = new PipelineClusterConfig(
-                "test-cluster-001",
-                pipelineGraphConfig,
-                pipelineModuleMap,
-                null, // defaultPipelineName
-                allowedKafkaTopics,
-                allowedGrpcServices
+                "test-cluster-001", pipelineGraphConfig, pipelineModuleMap,
+                null, allowedKafkaTopics, allowedGrpcServices
         );
 
         String json = objectMapper.writeValueAsString(config);
-        System.out.println("Serialized PipelineClusterConfig JSON:\n" + json);
+        System.out.println("Serialized PipelineClusterConfig JSON (New Model):\n" + json);
         PipelineClusterConfig deserialized = objectMapper.readValue(json, PipelineClusterConfig.class);
 
         assertEquals("test-cluster-001", deserialized.clusterName());
-
-        // Verify PipelineGraphConfig
         assertNotNull(deserialized.pipelineGraphConfig());
         assertEquals(1, deserialized.pipelineGraphConfig().pipelines().size());
         PipelineConfig deserializedPipeline = deserialized.pipelineGraphConfig().pipelines().get("pipeline-alpha");
@@ -144,56 +157,63 @@ class PipelineClusterConfigTest {
 
         PipelineStepConfig deserializedP1S1 = deserializedPipeline.pipelineSteps().get("p1s1");
         assertNotNull(deserializedP1S1);
-        assertEquals(TransportType.KAFKA, deserializedP1S1.transportType());
-        assertNotNull(deserializedP1S1.kafkaConfig());
-        assertEquals("input-for-p1s1", deserializedP1S1.kafkaConfig().listenTopics().getFirst());
-        assertEquals(List.of("p1s2"), deserializedP1S1.nextSteps());
+        assertEquals("module-k1", deserializedP1S1.processorInfo().grpcServiceName());
 
-        // Verify PipelineModuleMap
+        assertNotNull(deserializedP1S1.outputs().get("default_p1s2"));
+        assertEquals("p1s2", deserializedP1S1.outputs().get("default_p1s2").targetStepName());
+        assertEquals(TransportType.GRPC, deserializedP1S1.outputs().get("default_p1s2").transportType());
+        assertEquals("service-g1-target", deserializedP1S1.outputs().get("default_p1s2").grpcTransport().serviceName());
+
+        assertNotNull(deserializedP1S1.outputs().get("onError_p1err1"));
+        assertEquals("p1err1", deserializedP1S1.outputs().get("onError_p1err1").targetStepName());
+        assertEquals(TransportType.INTERNAL, deserializedP1S1.outputs().get("onError_p1err1").transportType());
+
+        PipelineStepConfig deserializedP1S2 = deserializedPipeline.pipelineSteps().get("p1s2");
+        assertNotNull(deserializedP1S2);
+        assertEquals(StepType.SINK, deserializedP1S2.stepType());
+        assertEquals("module-g1", deserializedP1S2.processorInfo().grpcServiceName());
+        assertTrue(deserializedP1S2.outputs().isEmpty());
+
         assertNotNull(deserialized.pipelineModuleMap());
         assertEquals(2, deserialized.pipelineModuleMap().availableModules().size());
         assertTrue(deserialized.pipelineModuleMap().availableModules().containsKey("module-k1"));
         assertEquals("schema-for-module-g1", deserialized.pipelineModuleMap().availableModules().get("module-g1").customConfigSchemaReference().subject());
 
-
-        // Verify allowed Kafka topics and gRPC services
         assertEquals(allowedKafkaTopics, deserialized.allowedKafkaTopics());
         assertEquals(allowedGrpcServices, deserialized.allowedGrpcServices());
     }
 
     @Test
-    void testValidation() {
+    void testValidation_PipelineClusterConfigConstructor() {
+        // Test null clusterName validation (direct constructor call)
         Exception eNullName = assertThrows(IllegalArgumentException.class, () -> new PipelineClusterConfig(
                 null, null, null, null, null, null));
-        assertTrue(eNullName.getMessage().contains("clusterName cannot be null or blank"));
+        assertTrue(eNullName.getMessage().contains("clusterName cannot be null"));
 
+        // Test blank clusterName validation (direct constructor call)
         Exception eBlankName = assertThrows(IllegalArgumentException.class, () -> new PipelineClusterConfig(
                 " ", null, null, null, null, null));
-        assertTrue(eBlankName.getMessage().contains("clusterName cannot be null or blank"));
-
+        assertTrue(eBlankName.getMessage().contains("PipelineClusterConfig clusterName cannot be null or blank"));
 
         PipelineClusterConfig configWithNulls = new PipelineClusterConfig(
                 "test-cluster-with-nulls", null, null, null, null, null);
-        assertNull(configWithNulls.pipelineGraphConfig()); // Allowed to be null
-        assertNull(configWithNulls.pipelineModuleMap());   // Allowed to be null
-
-        // Constructor should default null sets to empty sets
+        assertNull(configWithNulls.pipelineGraphConfig());
+        assertNull(configWithNulls.pipelineModuleMap());
         assertNotNull(configWithNulls.allowedKafkaTopics());
         assertTrue(configWithNulls.allowedKafkaTopics().isEmpty());
         assertNotNull(configWithNulls.allowedGrpcServices());
         assertTrue(configWithNulls.allowedGrpcServices().isEmpty());
 
-        // Test validation for elements within allowedKafkaTopics/allowedGrpcServices
-        // (Assuming the canonical constructor of PipelineClusterConfig handles this)
         Set<String> topicsWithNullEl = new HashSet<>();
         topicsWithNullEl.add(null);
+        // When calling constructor directly, expect the direct exception from validateNoNullOrBlankElements
         Exception eTopicNull = assertThrows(IllegalArgumentException.class, () -> new PipelineClusterConfig(
                 "c1", null, null, null, topicsWithNullEl, null));
         assertTrue(eTopicNull.getMessage().contains("allowedKafkaTopics cannot contain null or blank strings"));
 
-
         Set<String> servicesWithBlankEl = new HashSet<>();
-        servicesWithBlankEl.add("");
+        servicesWithBlankEl.add("   ");
+        // When calling constructor directly, expect the direct exception
         Exception eServiceBlank = assertThrows(IllegalArgumentException.class, () -> new PipelineClusterConfig(
                 "c1", null, null, null, null, servicesWithBlankEl));
         assertTrue(eServiceBlank.getMessage().contains("allowedGrpcServices cannot contain null or blank strings"));
@@ -205,105 +225,123 @@ class PipelineClusterConfigTest {
                 "json-prop-cluster",
                 new PipelineGraphConfig(Collections.emptyMap()),
                 new PipelineModuleMap(Collections.emptyMap()),
-                null, // defaultPipelineName
+                "default-pipeline-name",
                 Set.of("topicA"),
                 Set.of("serviceX")
         );
         String json = objectMapper.writeValueAsString(config);
-        System.out.println("JSON for testJsonPropertyNames() output:\n" + json);
+        System.out.println("JSON for PipelineClusterConfigTest.testJsonPropertyNames() output:\n" + json);
 
-        assertTrue(json.contains("\"clusterName\"") && json.contains("\"json-prop-cluster\""),
-                "clusterName key/value not found as expected. JSON: " + json);
-
-        // For pipelineGraphConfig
-        assertTrue(json.contains("\"pipelineGraphConfig\""), "pipelineGraphConfig key missing. JSON: " + json);
-        assertTrue(json.contains("\"pipelines\""), "nested 'pipelines' key missing in pipelineGraphConfig. JSON: " + json);
-        // ADD (?s) for DOTALL mode to allow . to match newlines
-        assertTrue(json.matches("(?s).*\"pipelines\"\\s*:\\s*\\{\\s*\\}.*"),  // <--- MODIFIED REGEX
-                "'pipelines' was not an empty object {{}}. JSON: " + json);
-
-
-        // For pipelineModuleMap
-        assertTrue(json.contains("\"pipelineModuleMap\""), "pipelineModuleMap key missing. JSON: " + json);
-        assertTrue(json.contains("\"availableModules\""), "nested 'availableModules' key missing in pipelineModuleMap. JSON: " + json);
-        // ADD (?s) for DOTALL mode
-        assertTrue(json.matches("(?s).*\"availableModules\"\\s*:\\s*\\{\\s*\\}.*"), // <--- MODIFIED REGEX
-                "'availableModules' was not an empty object {{}}. JSON: " + json);
-
-
-        assertTrue(json.contains("\"allowedKafkaTopics\"") && json.contains("\"topicA\""),
-                "allowedKafkaTopics key/value not found as expected. JSON: " + json);
-        assertTrue(json.contains("\"allowedGrpcServices\"") && json.contains("\"serviceX\""),
-                "allowedGrpcServices key/value not found as expected. JSON: " + json);
+        assertTrue(json.contains("\"clusterName\" : \"json-prop-cluster\""));
+        assertTrue(json.contains("\"pipelineGraphConfig\" : {"));
+        assertTrue(json.contains("\"pipelines\" : { }"));
+        assertTrue(json.contains("\"pipelineModuleMap\" : {"));
+        assertTrue(json.contains("\"availableModules\" : { }"));
+        assertTrue(json.contains("\"defaultPipelineName\" : \"default-pipeline-name\""));
+        assertTrue(json.contains("\"allowedKafkaTopics\" : [ \"topicA\" ]"));
+        assertTrue(json.contains("\"allowedGrpcServices\" : [ \"serviceX\" ]"));
     }
 
     @Test
     void testLoadFromJsonFile_WithNewModel() throws Exception {
-        // Requires "pipeline-cluster-config-new-model.json" in src/test/resources
-        // This JSON file must use the new PipelineStepConfig structure.
-        // Example JSON structure:
-        // {
-        //   "clusterName": "loaded-cluster",
-        //   "pipelineGraphConfig": {
-        //     "pipelines": {
-        //       "dataPipeline1": {
-        //         "name": "dataPipeline1",
-        //         "pipelineSteps": {
-        //           "kafkaIngest": {
-        //             "pipelineStepId": "kafkaIngest",
-        //             "pipelineImplementationId": "ingestMod",
-        //             "transportType": "KAFKA",
-        //             "kafkaConfig": {"listenTopics": ["rawInput"], "publishTopicPattern": "p1.ingest.out"},
-        //             "nextSteps": ["processInternal"]
-        //           },
-        //           "processInternal": {
-        //             "pipelineStepId": "processInternal",
-        //             "pipelineImplementationId": "procMod",
-        //             "transportType": "INTERNAL"
-        //           }
-        //         }
-        //       }
-        //     }
-        //   },
-        //   "pipelineModuleMap": {
-        //     "availableModules": {
-        //       "ingestMod": {"implementationName":"Ingest Module", "implementationId":"ingestMod", "customConfigSchemaReference":{"subject":"ingestSchema","version":1}},
-        //       "procMod": {"implementationName":"Processing Module", "implementationId":"procMod", "customConfigSchemaReference":{"subject":"procSchema","version":1}}
-        //     }
-        //   },
-        //   "allowedKafkaTopics": ["rawInput", "p1.ingest.out"],
-        //   "allowedGrpcServices": []
-        // }
-        try (InputStream is = getClass().getResourceAsStream("/pipeline-cluster-config-new-model.json")) {
-            assertNotNull(is, "Could not load resource /pipeline-cluster-config-new-model.json. Please create it with the new model.");
-            PipelineClusterConfig config = objectMapper.readValue(is, PipelineClusterConfig.class);
-
-            assertEquals("loaded-cluster", config.clusterName());
-            assertNotNull(config.pipelineGraphConfig());
-            assertEquals(1, config.pipelineGraphConfig().pipelines().size());
-            PipelineConfig p1 = config.pipelineGraphConfig().pipelines().get("dataPipeline1");
-            assertNotNull(p1);
-            PipelineStepConfig ingestStep = p1.pipelineSteps().get("kafkaIngest");
-            assertNotNull(ingestStep);
-            assertEquals(TransportType.KAFKA, ingestStep.transportType());
-            assertNotNull(ingestStep.kafkaConfig());
-            assertEquals("rawInput", ingestStep.kafkaConfig().listenTopics().getFirst());
-
-            assertNotNull(config.pipelineModuleMap());
-            assertTrue(config.pipelineModuleMap().availableModules().containsKey("ingestMod"));
-            assertEquals(Set.of("rawInput", "p1.ingest.out"), config.allowedKafkaTopics());
-            assertTrue(config.allowedGrpcServices().isEmpty());
+        String jsonToLoad = """
+        {
+          "clusterName": "loaded-cluster-from-file",
+          "defaultPipelineName": "dataPipelineFromFile",
+          "pipelineGraphConfig": {
+            "pipelines": {
+              "dataPipelineFromFile": {
+                "name": "dataPipelineFromFile",
+                "pipelineSteps": {
+                  "ingestStepFile": {
+                    "stepName": "ingestStepFile",
+                    "stepType": "INITIAL_PIPELINE",
+                    "description": "Ingests data from a conceptual file source",
+                    "customConfigSchemaId": "fileIngestSchemaV1",
+                    "customConfig": { "jsonConfig": {"sourcePath":"/input"} },
+                    "processorInfo": { "internalProcessorBeanName": "fileIngestModule" },
+                    "outputs": {
+                      "default": {
+                        "targetStepName": "processStepFile",
+                        "transportType": "KAFKA",
+                        "kafkaTransport": { "topic": "file.ingest.to.process", "kafkaProducerProperties": {"retention.ms":"3600000"}}
+                      }
+                    }
+                  },
+                  "processStepFile": {
+                    "stepName": "processStepFile",
+                    "stepType": "PIPELINE",
+                    "description": "Processes data",
+                    "processorInfo": { "grpcServiceName": "fileProcessorService" },
+                    "outputs": { "default" : { "targetStepName": "archiveStepFile", "transportType": "INTERNAL"}}
+                  },
+                  "archiveStepFile": {
+                    "stepName": "archiveStepFile",
+                    "stepType": "SINK",
+                    "description": "Archives data",
+                    "processorInfo": { "internalProcessorBeanName": "archiverModule" },
+                    "outputs": {}
+                  }
+                }
+              }
+            }
+          },
+          "pipelineModuleMap": {
+            "availableModules": {
+              "fileIngestModule": {"implementationName":"File Ingestor", "implementationId":"fileIngestModule", "customConfigSchemaReference":{"subject":"fileIngestSchema","version":1}},
+              "fileProcessorService": {"implementationName":"File Processor", "implementationId":"fileProcessorService", "customConfigSchemaReference":{"subject":"fileProcSchema","version":1}},
+              "archiverModule": {"implementationName":"Archiver", "implementationId":"archiverModule"}
+            }
+          },
+          "allowedKafkaTopics": ["file.ingest.to.process", "some.other.topic"],
+          "allowedGrpcServices": ["fileProcessorService", "another.utility.service"]
         }
+        """;
+        PipelineClusterConfig config = objectMapper.readValue(new ByteArrayInputStream(jsonToLoad.getBytes(StandardCharsets.UTF_8)), PipelineClusterConfig.class);
+
+        assertEquals("loaded-cluster-from-file", config.clusterName());
+        assertEquals("dataPipelineFromFile", config.defaultPipelineName());
+
+        assertNotNull(config.pipelineGraphConfig());
+        assertEquals(1, config.pipelineGraphConfig().pipelines().size());
+        PipelineConfig p1 = config.pipelineGraphConfig().pipelines().get("dataPipelineFromFile");
+        assertNotNull(p1);
+        assertEquals("dataPipelineFromFile", p1.name());
+        assertEquals(3, p1.pipelineSteps().size());
+
+        PipelineStepConfig ingestStep = p1.pipelineSteps().get("ingestStepFile");
+        assertNotNull(ingestStep);
+        assertEquals("ingestStepFile", ingestStep.stepName());
+        assertEquals(StepType.INITIAL_PIPELINE, ingestStep.stepType());
+        assertEquals("fileIngestModule", ingestStep.processorInfo().internalProcessorBeanName());
+        assertEquals("file.ingest.to.process", ingestStep.outputs().get("default").kafkaTransport().topic());
+
+        PipelineStepConfig processStep = p1.pipelineSteps().get("processStepFile");
+        assertNotNull(processStep);
+        assertEquals("fileProcessorService", processStep.processorInfo().grpcServiceName());
+
+        assertNotNull(config.pipelineModuleMap());
+        assertEquals(3, config.pipelineModuleMap().availableModules().size());
+        assertTrue(config.pipelineModuleMap().availableModules().containsKey("fileProcessorService"));
+        assertEquals("fileProcSchema", config.pipelineModuleMap().availableModules().get("fileProcessorService").customConfigSchemaReference().subject());
+
+        assertTrue(config.allowedKafkaTopics().contains("file.ingest.to.process"));
+        assertTrue(config.allowedGrpcServices().contains("fileProcessorService"));
     }
 
     @Test
-    void testImmutabilityOfCollections() {
-        // Setup with new PipelineStepConfig
-        PipelineStepConfig step = createSampleInternalStep("s1", "m1", null, null);
-        PipelineConfig pipeline = new PipelineConfig("p1", Map.of(step.pipelineStepId(), step));
+    void testImmutabilityOfCollections() throws Exception {
+        PipelineStepConfig.ProcessorInfo pi = new PipelineStepConfig.ProcessorInfo(null, "m1-bean");
+        PipelineStepConfig step = new PipelineStepConfig(
+                "s1", StepType.PIPELINE, null,null, null, Collections.emptyMap(),
+                0,1L,1L,1.0,1L, pi);
+
+        PipelineConfig pipeline = new PipelineConfig("p1", Map.of(step.stepName(), step));
         PipelineGraphConfig graphConfig = new PipelineGraphConfig(Map.of(pipeline.name(), pipeline));
+
         PipelineModuleConfiguration module = new PipelineModuleConfiguration("M1", "m1", new SchemaReference("ref", 1));
         PipelineModuleMap moduleMap = new PipelineModuleMap(Map.of(module.implementationId(), module));
+
         Set<String> topics = new HashSet<>(List.of("topicA"));
         Set<String> services = new HashSet<>(List.of("serviceA"));
 
@@ -312,41 +350,45 @@ class PipelineClusterConfigTest {
 
         assertThrows(UnsupportedOperationException.class, () -> config.allowedKafkaTopics().add("newTopic"));
         assertThrows(UnsupportedOperationException.class, () -> config.allowedGrpcServices().add("newService"));
-        assertNotNull(config.pipelineModuleMap()); // Should not be null if constructed with non-null
+        assertNotNull(config.pipelineModuleMap());
         assertThrows(UnsupportedOperationException.class, () -> config.pipelineModuleMap().availableModules().put("m2", null));
-        assertNotNull(config.pipelineGraphConfig()); // Should not be null if constructed with non-null
+        assertNotNull(config.pipelineGraphConfig());
         assertThrows(UnsupportedOperationException.class, () -> config.pipelineGraphConfig().pipelines().put("p2", null));
 
-        PipelineConfig p1 = config.pipelineGraphConfig().pipelines().get("p1");
-        assertNotNull(p1);
-        assertThrows(UnsupportedOperationException.class, () -> p1.pipelineSteps().put("s2", null));
-
-        // Immutability of lists within a PipelineStepConfig's transport config would be tested
-        // in PipelineStepConfigTest itself, assuming Map.copyOf makes shallow copies.
-        // Here we test collections directly held or deeply held by PipelineClusterConfig.
+        PipelineConfig p1Retrieved = config.pipelineGraphConfig().pipelines().get("p1");
+        assertNotNull(p1Retrieved);
+        assertThrows(UnsupportedOperationException.class, () -> p1Retrieved.pipelineSteps().put("s2", null));
     }
 
     @Test
-    void testEqualityAndHashCode_WithNewStepModel() {
-        // Create steps using the new model
-        PipelineStepConfig stepA1 = createSampleKafkaStep("s1", "m1", "s2", null);
-        PipelineStepConfig stepA2 = createSampleGrpcStep("s2", "m-grpc", "svc-grpc", null, null);
+    void testEqualityAndHashCode_WithNewStepModel() throws Exception {
+        PipelineStepConfig.ProcessorInfo procInfoKafkaMod = new PipelineStepConfig.ProcessorInfo("m1", null); // Assuming m1 is a gRPC service for a Kafka-type processor
+        PipelineStepConfig.ProcessorInfo procInfoGrpcMod = new PipelineStepConfig.ProcessorInfo("m-grpc", null); // Assuming m-grpc is a gRPC service
+        PipelineStepConfig.ProcessorInfo procInfoInternalMod = new PipelineStepConfig.ProcessorInfo(null, "m_other_bean");
 
-        PipelineStepConfig stepB1 = createSampleKafkaStep("s1", "m1", "s2", null); // Identical to stepA1
-        PipelineStepConfig stepB2 = createSampleGrpcStep("s2", "m-grpc", "svc-grpc", null, null); // Identical to stepA2
+        Map<String, PipelineStepConfig.OutputTarget> outputs1 = Map.of("default_s2",
+                new PipelineStepConfig.OutputTarget("s2", TransportType.GRPC, new GrpcTransportConfig("svc-grpc-target", Collections.emptyMap()), null)
+        );
+        PipelineStepConfig stepA1 = new PipelineStepConfig("s1", StepType.PIPELINE, "desc", "schema", createJsonConfigOptions("{}"), outputs1, 0,1L,1L,1.0,0L, procInfoKafkaMod);
+
+        Map<String, PipelineStepConfig.OutputTarget> outputs2 = Collections.emptyMap(); // SINK
+        PipelineStepConfig stepA2 = new PipelineStepConfig("s2", StepType.SINK, "desc", "schema_grpc", createJsonConfigOptions("{}"), outputs2, 0,1L,1L,1.0,0L, procInfoGrpcMod);
+
+
+        PipelineStepConfig stepB1 = new PipelineStepConfig("s1", StepType.PIPELINE, "desc", "schema", createJsonConfigOptions("{}"), outputs1, 0,1L,1L,1.0,0L, procInfoKafkaMod);
+        PipelineStepConfig stepB2 = new PipelineStepConfig("s2", StepType.SINK, "desc", "schema_grpc", createJsonConfigOptions("{}"), outputs2, 0,1L,1L,1.0,0L, procInfoGrpcMod);
 
         PipelineGraphConfig graph1 = new PipelineGraphConfig(
-                Map.of("p1", new PipelineConfig("p1", Map.of(stepA1.pipelineStepId(), stepA1, stepA2.pipelineStepId(), stepA2)))
+                Map.of("p1", new PipelineConfig("p1", Map.of(stepA1.stepName(), stepA1, stepA2.stepName(), stepA2)))
         );
         PipelineGraphConfig graph2 = new PipelineGraphConfig( // Identical to graph1
-                Map.of("p1", new PipelineConfig("p1", Map.of(stepB1.pipelineStepId(), stepB1, stepB2.pipelineStepId(), stepB2)))
-        );
-        // Create a different graph for inequality test
-        PipelineStepConfig stepC1 = createSampleInternalStep("s_other", "m_other", null, null);
-        PipelineGraphConfig graph3 = new PipelineGraphConfig(
-                Map.of("p_other", new PipelineConfig("p_other", Map.of(stepC1.pipelineStepId(), stepC1)))
+                Map.of("p1", new PipelineConfig("p1", Map.of(stepB1.stepName(), stepB1, stepB2.stepName(), stepB2)))
         );
 
+        PipelineStepConfig stepC1 = new PipelineStepConfig("s_other", StepType.SINK, "desc", "schema_other",null, Collections.emptyMap(),0,1L,1L,1.0,0L, procInfoInternalMod);
+        PipelineGraphConfig graph3 = new PipelineGraphConfig( // Different graph
+                Map.of("p_other", new PipelineConfig("p_other", Map.of(stepC1.stepName(), stepC1)))
+        );
 
         PipelineModuleMap modules1 = new PipelineModuleMap(
                 Map.of("m1", new PipelineModuleConfiguration("Mod1", "m1", new SchemaReference("schema", 1)),
@@ -357,11 +399,9 @@ class PipelineClusterConfigTest {
                         "m-grpc", new PipelineModuleConfiguration("ModGrpc", "m-grpc", new SchemaReference("schema-grpc",1)))
         );
 
-
-        PipelineClusterConfig config1 = new PipelineClusterConfig("clusterA", graph1, modules1, null, Set.of("t1"), Set.of("g1"));
-        PipelineClusterConfig config2 = new PipelineClusterConfig("clusterA", graph2, modules2, null, Set.of("t1"), Set.of("g1")); // Identical
-        PipelineClusterConfig config3_diff_graph = new PipelineClusterConfig("clusterA", graph3, modules1, null, Set.of("t1"), Set.of("g1"));
-
+        PipelineClusterConfig config1 = new PipelineClusterConfig("clusterA", graph1, modules1, "p1", Set.of("t1"), Set.of("g1"));
+        PipelineClusterConfig config2 = new PipelineClusterConfig("clusterA", graph2, modules2, "p1", Set.of("t1"), Set.of("g1"));
+        PipelineClusterConfig config3_diff_graph = new PipelineClusterConfig("clusterA", graph3, modules1, "p1", Set.of("t1"), Set.of("g1"));
 
         assertEquals(config1, config2);
         assertEquals(config1.hashCode(), config2.hashCode());
